--- a/tests/Ae.MetOfficeDataHub.Tests.csproj
+++ b/tests/Ae.MetOfficeDataHub.Tests.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Ae.MetOfficeDataHub.SiteSpecific.csproj" />
+    <ProjectReference Include="..\src\Ae.MetOfficeDataHub.csproj" />
   </ItemGroup>
 
   <ItemGroup>
